fix navbar alignment on small screens

--- a/scss/legacy.scss
+++ b/scss/legacy.scss
@@ -297,10 +297,14 @@ h1 {
 // Responsive navbar
 @media (max-width: 767.98px) {
     .header {
-        width: 92%;
-        margin-left: 4%;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
         margin-top: 12px;
         margin-bottom: 16px;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        box-sizing: border-box;
         flex-wrap: wrap;
         align-items: flex-start;
         position: relative;
@@ -335,6 +339,13 @@ h1 {
 
     .nav-divider {
         display: none;
+    }
+
+    .main {
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
     }
 }
 
